# MedVision

./: .gitignore  pyproject.toml  setup.py
medvision/csrc/: vision.cpp
medvision/csrc/cuda/: roi_align_3d_cuda.cu  roi_align_rotated_3d_cuda.cu
medvision/ops/: __init__.py
medvision/ops/pytorch_ops/: __init__.py
test/: ops_test_RoIAlign.py
